--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 :root {
   --c-border: #0d0d0d;
 
-  --cover-height: 192px;
-  --cover-width: 192px;
+  --cover-font-size: 1.25em;
+  --cover-size: 192px;
   --grid-gap: 12px;
+  --max-columns: 7;
   --padding: 16px;
+  --transition: 150ms;
 }
 
 * {
@@ -24,10 +26,12 @@ body {
 
 a {
   color: #dfa071;
+  display: inline-block;
   text-decoration: none;
+  transition: var(--transition);
 }
 a:hover {
-  text-decoration: underline;
+  filter: brightness(1.15);
 }
 
 h3 {
@@ -41,6 +45,9 @@ ul {
 
 li {
   padding: 2px 0;
+}
+li a:hover {
+  transform: translate(4px, 0);
 }
 
 .main {
@@ -71,7 +78,10 @@ li {
 }
 
 .roms-container {
-  max-width: 1008px;
+  max-width: calc(
+    var(--max-columns) * var(--cover-size) + (var(--max-columns) - 1) *
+      var(--grid-gap)
+  );
   padding: 0 0 33vh;
   width: 100%;
 }
@@ -83,8 +93,8 @@ li {
 .roms-grid {
   display: grid;
   grid-gap: var(--grid-gap);
-  grid-template-columns: repeat(auto-fill, var(--cover-width));
-  grid-template-rows: repeat(auto-fill, var(--cover-height));
+  grid-template-columns: repeat(auto-fill, var(--cover-size));
+  grid-template-rows: repeat(auto-fill, var(--cover-size));
   justify-content: center;
 }
 
@@ -93,8 +103,8 @@ li {
 }
 
 .rom {
-  height: var(--cover-height);
-  width: var(--cover-width);
+  height: var(--cover-size);
+  width: var(--cover-size);
 
   align-items: center;
   cursor: pointer;
@@ -109,10 +119,10 @@ li {
 }
 
 .rom-cover {
-  max-height: var(--cover-height);
-  max-width: var(--cover-width);
+  max-height: var(--cover-size);
+  max-width: var(--cover-size);
+  transition: var(--transition);
 
-  transition: 150ms;
   border-radius: 4px;
 }
 
@@ -121,7 +131,7 @@ li {
   background: #333;
   color: #fff;
   display: flex;
-  font-size: 1.25em;
+  font-size: var(--cover-font-size);
   height: 100%;
   justify-content: center;
   padding: 16px;
