--- a/src/styles/roms.css
+++ b/src/styles/roms.css
@@ -1,6 +1,6 @@
 .roms-container {
   max-width: calc(
-    var(--max-columns) * var(--cover-size) + (var(--max-columns) - 1) *
+    var(--max-columns) * var(--cover-width) + (var(--max-columns) - 1) *
       var(--grid-gap)
   );
   padding: 0 0 33vh;
@@ -16,7 +16,7 @@
   display: grid;
   grid-auto-rows: minmax(min-content, max-content);
   grid-gap: var(--grid-gap);
-  grid-template-columns: repeat(auto-fill, var(--cover-size));
+  grid-template-columns: repeat(auto-fill, var(--cover-width));
   justify-content: center;
 }
 
@@ -38,7 +38,8 @@
 }
 
 .rom-cover {
-  max-width: var(--cover-size);
+  width: var(--cover-width);
+  min-height: var(--min-cover-height);
   transition: var(--transition);
 
   border-radius: 4px;
