--- a/src/styles/roms.css
+++ b/src/styles/roms.css
@@ -53,7 +53,7 @@
   font-size: var(--cover-font-size);
   height: 100%;
   justify-content: center;
-  padding: var(--spacing-m);
+  padding: var(--cover-padding);
   text-align: center;
   width: 100%;
 }
