--- a/src/styles/roms.css
+++ b/src/styles/roms.css
@@ -6,6 +6,9 @@
   padding: 0 0 33vh;
   width: 100%;
 }
+.roms-container:has(.rom:hover) .rom:not(:hover) {
+  filter: grayscale(0.75);
+}
 
 .roms-container h3 {
   margin: var(--spacing-l) 0 0;
@@ -29,6 +32,7 @@
   cursor: pointer;
   display: flex;
   justify-content: center;
+  transition: var(--transition);
 }
 .rom:hover {
   text-decoration: none;
