--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,9 @@
 :root {
+  --c-anchor-hover: #ffd98c;
+  --c-anchor: #d9a36c;
   --c-background: #191919;
   --c-border: #2b2b2b;
+  --c-foreground: #fff;
   --c-selected: #333;
 
   --spacing-xxs: 2px;
@@ -27,7 +30,7 @@
 
 body {
   background-color: var(--c-background);
-  color: #fff;
+  color: var(--c-foreground);
   font-family: 'Roboto', Verdana, sans-serif;
   font-size: 18px;
   margin: 0;
@@ -35,13 +38,13 @@ body {
 }
 
 a {
-  color: #dfa071;
+  color: var(--c-anchor);
   display: inline-block;
   text-decoration: none;
   transition: var(--transition);
 }
 a:hover {
-  filter: brightness(1.15);
+  color: var(--c-anchor-hover);
 }
 
 .main {
