--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -20,13 +20,12 @@
 
 * {
   box-sizing: border-box;
-  font-weight: normal;
   scroll-behavior: smooth;
 }
 
 body {
-  background-color: var(--c-background);
-  color: var(--c-foreground);
+  background-color: var(--c-bg);
+  color: var(--c-fg);
   font-family: 'Roboto', Verdana, sans-serif;
   font-size: 18px;
   margin: 0;
@@ -34,13 +33,13 @@ body {
 }
 
 a {
-  color: var(--c-anchor);
+  color: var(--c-anchor-fg);
   display: inline-block;
   text-decoration: none;
   transition: var(--transition);
 }
 a:hover {
-  color: var(--c-anchor-hover);
+  color: var(--c-anchor-hover-fg);
 }
 
 .main {
@@ -59,11 +58,12 @@ a:hover {
 }
 
 .sidebar {
+  background-color: var(--c-sidebar-bg);
   border: solid var(--c-border);
   border-width: 0 1px;
   display: flex;
   flex-direction: column;
-  margin: var(--spacing-m) 0;
+  padding: var(--spacing-m) 0;
   overflow-y: auto;
   width: var(--sidebar-width);
 }
@@ -95,7 +95,7 @@ a:hover {
 }
 
 hr {
-  border: solid var(--c-selected);
+  border: solid var(--c-list-anchor-hover-bg);
   border-width: 1px 0 0;
 }
 
@@ -117,7 +117,7 @@ ul.no-style {
 ::-webkit-scrollbar,
 ::-webkit-scrollbar-corner,
 ::-webkit-scrollbar-track-piece {
-  background: var(--c-background);
+  background: var(--c-bg);
 }
 
 ::-webkit-scrollbar {
@@ -127,7 +127,7 @@ ul.no-style {
 
 ::-webkit-scrollbar-thumb {
   background: var(--c-scrollbar);
-  border: 3px solid var(--c-background);
+  border: 3px solid var(--c-bg);
   border-radius: 8px;
 }
 
