Completed rom navigation.

--- a/src/styles/link-list.css
+++ b/src/styles/link-list.css
@@ -1,33 +1,1 @@
-.link-list + .link-list {
-  margin-top: var(--spacing-l);
-}
-
-.link-list hr {
-  margin: var(--spacing-xs) var(--spacing-m);
-}
-
-.link-list li > * {
-  border-radius: 4px;
-  padding: var(--spacing-xs) var(--spacing-m);
-}
-
-.link-list li:not(.header) > * {
-  color: var(--c-list-anchor-fg);
-  display: inline-block;
-  padding: var(--spacing-xs) var(--spacing-l);
-  transition: var(--transition);
-  width: calc(100% - var(--spacing-xs) * 2);
-}
-.link-list li:not(.header):not(.no-hover) > *:hover {
-  background-color: var(--c-list-anchor-hover-bg);
-  color: var(--c-list-anchor-hover-fg);
-  transform: translate(var(--spacing-xs), 0);
-}
-
-.link-list .header {
-  margin: var(--spacing-xs);
-}
-.link-list .header > * {
-  background-color: var(--c-list-header-bg);
-  color: var(--c-list-header-fg);
-}
+.link-list+.link-list{margin-top:var(--spacing-l)}.link-list hr{margin:var(--spacing-xs) var(--spacing-m)}.link-list li>*{border-radius:4px;padding:var(--spacing-xs) var(--spacing-m)}.link-list li:not(.header)>*{color:var(--c-list-anchor-fg);display:inline-block;padding:var(--spacing-xs) var(--spacing-l);transition:var(--transition);width:calc(100% - var(--spacing-xs)*2)}.link-list li.header{margin:var(--spacing-xs)}.link-list li.header>*{background-color:var(--c-list-header-bg);color:var(--c-list-header-fg)}.link-list li:not(.header):not(.no-hover)>*:hover{background-color:var(--c-list-anchor-hover-bg);color:var(--c-list-anchor-hover-fg);transform:translate(var(--spacing-xs), 0)}/*# sourceMappingURL=link-list.css.map */
