--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,137 +1,1 @@
-:root {
-  --spacing-xxs: 2px;
-  --spacing-xs: 4px;
-  --spacing-s: 8px;
-  --spacing-m: 16px;
-  --spacing-l: 24px;
-  --spacing-xl: 32px;
-
-  --transition: 150ms;
-
-  /* overridable */
-  --cover-font-size: 1.25em;
-  --cover-padding: 16px;
-  --cover-width: 192px;
-  --grid-gap: 12px;
-  --max-columns: 7;
-  --min-cover-height: 136px;
-  --sidebar-width: 192px;
-}
-
-* {
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-}
-
-body {
-  background-color: var(--c-bg);
-  color: var(--c-fg);
-  font-family: 'Roboto', Verdana, sans-serif;
-  font-size: 18px;
-  margin: 0;
-  padding: 0;
-}
-
-a {
-  color: var(--c-anchor-fg);
-  display: inline-block;
-  text-decoration: none;
-  transition: var(--transition);
-}
-a:hover {
-  color: var(--c-anchor-hover-fg);
-}
-
-.main {
-  display: flex;
-  height: 100vh;
-  margin: 0 auto;
-}
-
-.main-contents {
-  background-color: var(--c-main-bg);
-  padding: 0 var(--spacing-m);
-}
-
-.sidebar h4:first-child,
-.main-contents .platform:first-child h3 {
-  margin-top: 0;
-}
-
-.sidebar {
-  background-color: var(--c-sidebar-bg);
-  border: solid var(--c-border);
-  border-width: 0 1px;
-  display: flex;
-  flex-direction: column;
-  padding: var(--spacing-m) 0;
-  overflow-y: auto;
-  width: var(--sidebar-width);
-}
-.sidebar.left-sidebar {
-  border-left-width: 0;
-}
-.sidebar.right-sidebar {
-  border-right-width: 0;
-}
-
-.sidebar h4:first-child {
-  margin: var(--spacing-s) 0 var(--spacing-m);
-}
-
-.sidebar .platforms-list {
-  margin-bottom: var(--spacing-l);
-}
-.sidebar .platforms-list + .settings-list {
-  margin-top: auto;
-}
-
-.main-contents {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  height: 100%;
-  overflow-y: scroll;
-}
-
-hr {
-  border: solid var(--c-list-anchor-hover-bg);
-  border-width: 1px 0 0;
-}
-
-ul.no-style {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.secondary {
-  opacity: 0.67;
-}
-
-.tertiary {
-  opacity: 0.33;
-}
-
-/* Scrollbar */
-::-webkit-scrollbar,
-::-webkit-scrollbar-corner,
-::-webkit-scrollbar-track-piece {
-  background: var(--c-bg);
-}
-
-::-webkit-scrollbar {
-  width: var(--scrollbar-width);
-  height: var(--scrollbar-width);
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--c-scrollbar);
-  border: 3px solid var(--c-bg);
-  border-radius: 8px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: var(--c-scrollbar-hover);
-}
+:root{--spacing-xxs: 2px;--spacing-xs: 4px;--spacing-s: 8px;--spacing-m: 16px;--spacing-l: 24px;--spacing-xl: 32px;--transition: 150ms;--cover-font-size: 1.25em;--cover-padding: 16px;--cover-width: 192px;--grid-gap: 12px;--max-columns: 7;--min-cover-height: 136px;--sidebar-width: 192px}*{box-sizing:border-box;scroll-behavior:smooth}body{background-color:var(--c-bg);color:var(--c-fg);font-family:"Roboto",Verdana,sans-serif;font-size:18px;margin:0;padding:0}a{color:var(--c-anchor-fg);display:inline-block;text-decoration:none;transition:var(--transition)}a:hover{color:var(--c-anchor-hover-fg)}.main{display:flex;height:100vh;margin:0 auto}.main-contents{background-color:var(--c-main-bg);padding:0 var(--spacing-m)}.sidebar{background-color:var(--c-sidebar-bg);border:solid var(--c-border);border-width:0 1px;display:flex;flex-direction:column;padding:var(--spacing-m) 0;overflow-y:auto;width:var(--sidebar-width)}.sidebar.left-sidebar{border-left-width:0}.sidebar.right-sidebar{border-right-width:0}.sidebar h4:first-child{margin:var(--spacing-s) 0 var(--spacing-m)}.sidebar .platforms-list{margin-bottom:var(--spacing-l)}.sidebar .platforms-list+.settings-list{margin-top:auto}.sidebar h4:first-child,.main-contents .platform:first-child h3{margin-top:0}.main-contents{align-items:center;display:flex;flex-direction:column;flex:1;height:100%;overflow-y:scroll}hr{border:solid var(--c-list-anchor-hover-bg);border-width:1px 0 0}ul.no-style{list-style-type:none;margin:0;padding:0}.secondary{opacity:.67}.tertiary{opacity:.33}::-webkit-scrollbar,::-webkit-scrollbar-corner,::-webkit-scrollbar-track-piece{background:var(--c-bg)}::-webkit-scrollbar{width:var(--scrollbar-width);height:var(--scrollbar-width)}::-webkit-scrollbar-thumb{background:var(--c-scrollbar);border:3px solid var(--c-bg);border-radius:8px}::-webkit-scrollbar-thumb:hover{background:var(--c-scrollbar-hover)}/*# sourceMappingURL=main.css.map */
