--- a/src/styles/roms.css
+++ b/src/styles/roms.css
@@ -1,74 +1,1 @@
-.roms-container {
-  max-width: calc(
-    var(--max-columns) * var(--cover-width) + (var(--max-columns) - 1) *
-      var(--grid-gap)
-  );
-  padding: 0 0 33vh;
-  width: 100%;
-}
-
-.roms-container h3 {
-  margin: var(--spacing-l) 0 0;
-  padding: var(--spacing-l) 0 var(--spacing-m);
-}
-
-.roms-grid {
-  display: grid;
-  grid-auto-rows: minmax(min-content, max-content);
-  grid-gap: var(--grid-gap);
-  grid-template-columns: repeat(auto-fill, var(--cover-width));
-  justify-content: center;
-}
-
-.roms-grid + .roms-grid {
-  margin-top: 12px;
-}
-
-.roms-grid .rom {
-  align-items: center;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  transition: box-shadow 150ms;
-}
-.roms-grid .rom:hover {
-  text-decoration: none;
-}
-.roms-grid .rom:hover .rom-cover {
-  transform: scale(1.025) translate(0, -2px);
-  filter: brightness(1.1) saturate(1.1);
-}
-.roms-grid .rom:active {
-  opacity: 0.85;
-}
-.roms-grid .rom:active .rom-cover {
-  transform: none;
-}
-.with-shadows .roms-grid .rom {
-  box-shadow: 0px 4px 8px 0px rgb(0 0 0 / 50%);
-  transition: box-shadow 150ms;
-}
-.with-shadows .roms-grid .rom:hover {
-  box-shadow: 0px 8px 12px 0px rgb(0 0 0 / 33%);
-}
-
-.roms-grid .rom-cover {
-  width: var(--cover-width);
-  min-height: var(--min-cover-height);
-  transition: var(--transition);
-
-  border-radius: 4px;
-}
-
-.roms-grid .rom-title {
-  align-items: center;
-  background: var(--c-list-anchor-hover-bg);
-  color: var(--c-fg);
-  display: flex;
-  font-size: var(--cover-font-size);
-  height: 100%;
-  justify-content: center;
-  padding: var(--cover-padding);
-  text-align: center;
-  width: 100%;
-}
+.roms-container{max-width:calc(var(--max-columns)*var(--cover-width) + (var(--max-columns) - 1)*var(--grid-gap));padding:0 0 33vh;width:100%}.roms-container h3{margin:var(--spacing-l) 0 0;padding:var(--spacing-l) 0 var(--spacing-m)}.roms-grid{display:grid;grid-auto-rows:minmax(min-content, max-content);grid-gap:var(--grid-gap);grid-template-columns:repeat(auto-fill, var(--cover-width));justify-content:center}.roms-grid+.roms-grid{margin-top:12px}.roms-grid .rom{align-items:center;cursor:pointer;display:flex;justify-content:center;transition:box-shadow 150ms}.roms-grid .rom:hover,.roms-grid .rom.selected{text-decoration:none}.roms-grid .rom:hover .rom-cover,.roms-grid .rom.selected .rom-cover{transform:scale(1.025) translate(0, -2px);filter:brightness(1.1) saturate(1.1)}.roms-grid .rom:hover.selected,.roms-grid .rom.selected.selected{margin:-4px}.roms-grid .rom:hover.selected .rom-cover,.roms-grid .rom.selected.selected .rom-cover{transform:scale(1.05) translate(0, -4px);border:4px solid rgba(0,0,0,0);background:#fff;transition:all 150ms,border 50ms}.roms-grid .rom:active{opacity:.85}.roms-grid .rom:active .rom-cover{transform:none}.roms-grid .rom.with-shadows{box-shadow:0px 4px 8px 0px rgba(0,0,0,.5);transition:box-shadow 150ms}.roms-grid .rom.with-shadows:hover,.roms-grid .rom.with-shadows.selected{box-shadow:0px 8px 12px 0px rgba(0,0,0,.33),inset 0 0 4px #fff}.roms-grid .rom-cover{width:var(--cover-width);min-height:var(--min-cover-height);transition:var(--transition);border-radius:4px}.roms-grid .rom-title{align-items:center;background:var(--c-list-anchor-hover-bg);color:var(--c-fg);display:flex;font-size:var(--cover-font-size);height:100%;justify-content:center;padding:var(--cover-padding);text-align:center;width:100%}/*# sourceMappingURL=roms.css.map */
