--- a/src/styles/roms.scss
+++ b/src/styles/roms.scss
@@ -34,16 +34,18 @@
     &.selected {
       text-decoration: none;
 
-      .rom-cover {
-        transform: scale(1.025) translate(0, -2px);
-        filter: brightness(1.1) saturate(1.1);
+      &:hover {
+        .rom-cover {
+          transform: scale(1.025) translate(0, -1%);
+          filter: brightness(1.1) saturate(1.1);
+        }
       }
 
       &.selected {
         margin: -4px;
 
         .rom-cover {
-          transform: scale(1.05) translate(0, -4px);
+          transform: scale(1.05);
           border: 4px solid transparent;
           background: #fff;
           transition: all 150ms, border 50ms;
